CHANGELOG
=========
3.3.0 (2017-06-21)
------------------

* [FEATURE] #3112 Better recognizable icons (svg)
* [FIXED] #4481 Error message when selecting no action option on slot overview page
* [FEATURE] #3780 Participantslist in slot overview table newly formatted
* [FIXED] #3318 Message provider names now according to the moodle standards
* [FEATURE] #3259 Module description in moodle layout
* [FEATURE] #3257 Add a slot: only one page
* [FIXED] #4405 Location gets lost when creating a slot


3.2.1 (2017-03-28)
------------------

* [FIXED] #4350 Messages sent to group members although group mode is not activated
* [FIXED] #4367 Page "Registration status" in goupmode lacks groups without registration


3.2.0 (2017-01-31)
------------------

* Moodle 3.2 compatible version
* [FEATURE] #3595 Enable Global Search for organizer
* [CHANGE] #3675 Replace cron job with Task API
* [CHANGE] #3889 Use message class for message object instead of stdClass
* [CHANGE] #3890 Add course-ID to message objects


3.1.5 (2016-11-15)
------------------

* [FIXED] #3826 Slots without registration can not be printed


3.1.4 (2016-10-21)
------------------

* [FIXED] #3771 Expired organizer can not be graded and slots can not be printed


3.1.3 (2016-09-09)
------------------

* [FIXED] #3754 PostgreSQL database error on tab registration status


3.1.2 (2016-08-30)
------------------

* [FIXED] #3691 Fails on new installation


3.1.0 (2016-07-21)
------------------

* Moodle 3.1 compatible version
* [FEATURE] #3556 Enhanced legend
* [FEATURE] #3254 After creating a new organizer the user will be sent to the "Add a new
  slot" page immediately
* [FEATURE] #3114 Action-buttons in up-to-date moodle style
* [FEATURE] #3118 Improve wording of email messages (location)
* [FEATURE] #3132 Show participants in the waiting list of a slot to teachers
* [FEATURE] #2788 Capability for the responsibility for time slots
* [FEATURE] #3128 Add student to slot manually
* [FIXED] #3602 CSS